--- a/css/style.css
+++ b/css/style.css
@@ -344,14 +344,6 @@ text-align : center;
 vertical-align : middle;
 width : 100%;
 }
-#slider_sec {
-background-image : url("../img/slider.jpg");
-background-position : center center;
-background-repeat : no-repeat;
-background-size : 100% 100%;
-height : 650px;
-width : 100%;
-}
 .left_crousel_btn, .right_crousel_btn {
 color : #fff;
 height : 20px;
@@ -833,7 +825,7 @@ margin-left : 15px;
 padding : 100px 0;
 }
 .main_menu_sec {
-background : 0 0 repeat scroll #353638;
+background : 0 0 repeat scroll rgba(133, 228, 226, 0.9);
 border : none 0;
 margin : 0;
 }
