armando version estable y buena

--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ width : 100%;
 text-align : center;
 }
 #tstm_sec {
-background-image : url("../img/testimonial_bg.jpg");
+background-image : url("../img_r/testimonial.png");
 background-position : center center;
 background-repeat : no-repeat;
 background-size : 100% 100%;
