--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,19 +9,28 @@ header nav {
   font-size: 18px;
 }
 
+
 #image_slider {
+/*
 background-image : url("../img_r/banner.jpg");
 background-repeat: no-repeat;
 width: 90%;
 height: 600px;
-
 margin: 15px auto;
-
-
-
-
+*/
+width: 90%;
+margin: 15px auto;
+background-image : url("../img_r/banner.jpg");
+height: 600px;
+background-position : center center;
+background-repeat : no-repeat;
+background-size : 100% 100%;
+padding : 40px 0;
 }
 
+.centrarimg{
+  align-items: center;
+}
 
 .menu_bar {
   display:none;
@@ -91,5 +100,16 @@ section {
   .menu_bar span {
     float: right;
     font-size: 40px;
+  }
+  #image_slider {
+    width: 95%;
+    margin: 10px auto;
+    background-image : url("../img_r/back_res.png");
+    height: 550px;
+    margin-top: 40px;
+    background-position : center center;
+    background-repeat : no-repeat;
+    background-size : 90% 100%;
+    padding : 40px 0;
   }
 }
