subido a produccion, aun quedan unos detalles

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -84,7 +84,7 @@ padding : 40px 0;
 }
 
 .img_item{
-background-image : url("../img_r/banner.jpg");
+background-image : url("../img_r/banner.1.jpeg");
 width: 90%;
 height: 500px;
 -webkit-background-size: cover;
